# OpenCvTiny

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencvtiny/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/opencvtiny/: MainActivity.java  OpenCv.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/sdk/native/jni/: OpenCV.mk  OpenCVConfig.cmake
app/src/main/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
app/src/main/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
app/src/main/sdk/native/jni/abi-x86/: OpenCVModules-release.cmake
app/src/main/sdk/native/jni/abi-x86_64/: OpenCVModules-release.cmake  OpenCVModules.cmake
app/src/main/sdk/native/jni/include/opencv2/: cvconfig.h
app/src/test/java/com/example/opencvtiny/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
